2005-11-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* WebRequestMethods.cs: New 2.0 class.
	
2005-11-05  Atsushi Enomoto  <atsushi@ximian.com>

	* WebClient: use POST for DownloadData(). Fixed bug #76631.

2005-10-26  Atsushi Enomoto  <atsushi@ximian.com>

	* AuthenticationSchemes.cs : Fixed enum values and added [Flags].

2005-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* WebClient.cs : added net_2_0 DownloadString() and DownloadData()
	  with HTTP method as well.

2005-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* WebClient.cs : added UploadString() and Encoding (net_2_0). Added
	  some new overloaded stuff that takes Uri instead of string address.

2005-10-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* ICredentialPolicy.cs: New. Interface for 2.0.

2005-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* AuthenticationSchemes.cs : new 2.0 enum.

2005-08-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* GlobalProxySelection.cs: remove double lock.
	* HttpWebRequest.cs: remove double lock in GetServicePoint() and use
	a private object when locking.

2005-07-15  Miguel de Icaza  <miguel@novell.com>

	* DigestClient.cs: Fix bug #75556, the qop argument must be
	quoted, per http://www.faqs.org/rfcs/rfc2617.html section
	`quo-options'.

2005-07-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnectionStream.cs: initiate writing the body before trying to
	read. This fixes the performance problems observed in web services.
	Closes bug #75455.

2005-06-27  Lluis Sanchez Gual <lluis@novell.com>

	* IPAddress.cs: Changed field names for the sake of serialization
	interoperability with MS.NET.
	
2005-06-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: if cnc.EndRead throws, mark the asyncresult as done.
	* WebConnectionStream.cs: if we're done with the body of a chunk, don't
	require the next chunk header to be there, as some servers might close
	the connection (while also sending 'Connection: close').
