@@ -1,3 +1,8 @@
+2005-11-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* IPv6Address.cs: Added on overload to ToString to get a the full 
+	length address returned (as required by System.Uri).
+
 2005-11-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* WebRequestMethods.cs: New 2.0 class.
